tests/baselines/reference/thisExpressionInCallExpressionWithTypeArguments.errors.txt
thisExpressionInCallExpressionWithTypeArguments.ts(2,32): error TS2558: Expected 1 type arguments, but got 2.


==== thisExpressionInCallExpressionWithTypeArguments.ts (1 errors) ====
    class C {
        public foo() { [1,2,3].map<any,any>((x) => { return this; })}
                                   ~~~~~~~
!!! error TS2558: Expected 1 type arguments, but got 2.
    }
    